# stm32f042

./: Cargo.toml  README.md  Xargo.toml  device.x  memory.x
examples/: blinky.rs  blinky_systick.rs  flash_systick_hsi48.rs  gpio_input_ixpando_counter.rs  i2c_ina260.rs  i2c_ixpando_ascii_decoder.rs  i2c_scanner.rs  i2c_ssd1306.rs  led_pwm.rs  led_pwm_qei.rs  serial_echo.rs  serial_echo_irq.rs  serial_helloworld.rs  serial_hsi48_helloworld.rs  serial_slow_helloworld.rs
src/: lib.rs
src/can/: mod.rs
src/comp/: mod.rs
src/comp/csr/: mod.rs
src/crc/cr/: mod.rs
src/dbgmcu/: mod.rs
src/dbgmcu/apbhfz/: mod.rs
src/dbgmcu/apblfz/: mod.rs
src/exti/pr/: mod.rs
src/flash/obr/: mod.rs
src/peripherals/: i2c.rs  mod.rs  usart.rs
src/pwr/cr/: mod.rs
src/pwr/csr/: mod.rs
src/rcc/ahbenr/: mod.rs
src/rcc/ahbrstr/: mod.rs
src/rcc/apb1enr/: mod.rs
src/rcc/apb1rstr/: mod.rs
src/rcc/apb2enr/: mod.rs
src/rcc/apb2rstr/: mod.rs
src/rtc/calr/: mod.rs
src/rtc/shiftr/: mod.rs
src/syscfg/: mod.rs
src/syscfg/cfgr1/: mod.rs
src/syscfg/cfgr2/: mod.rs
src/tim2/dier/: mod.rs
