[package]
authors = ["Daniel Egger <daniel@eggers-club.de>"]
categories = ["embedded"]
description = "Peripheral access API for STM32F042 microcontrollers"
documentation = "https://docs.rs/stm32f042"
keywords = [
    "no-std",
    "arm",
    "cortex-m",
    "stm32",
]
license = "0BSD"
name = "stm32f042"
repository = "https://github.com/therealprof/stm32f042"
version = "0.5.3"

[dependencies]
bare-metal = "0.1.2"
cortex-m = "0.4.3"
cortex-m-rt = "0.4.0"
panic-abort = "0.1.1"
vcell = "0.1.0"

[features]
default = ["rt"]
rt = []
[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
debug = true
lto = true
opt-level = "s"
